# autoware_msgs

./: .pre-commit-config.yaml  README.md
.github/: CODEOWNERS  sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  bump-new-version.yaml  comment-on-pr.yaml  github-release.yaml  pre-commit-optional.yaml  pre-commit.yaml  release-new-version-when-merged.yaml  spell-check-daily.yaml  spell-check-differential.yaml  update-codeowners-from-packages.yaml
autoware_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_control_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_control_msgs/msg/: Control.msg  ControlHorizon.msg  ControlHorizonArray.msg  ControlLateral.msg  ControlLongitudinal.msg  Lateral.msg  Longitudinal.msg
autoware_debug_msgs/: CMakeLists.txt  package.xml
autoware_debug_msgs/msg/: ProcessingTimeNode.msg  ProcessingTimeTree.msg
autoware_evaluation_msgs/: CMakeLists.txt  package.xml
autoware_evaluation_msgs/msg/: PathPointWithLaneIdV1.msg  PathWithLaneIdV1.msg
autoware_localization_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_localization_msgs/srv/: InitializeLocalization.srv
autoware_map_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_map_msgs/msg/: AreaInfo.msg  HDMapBin.msg  HDMapSegment.msg  LaneletMapCellMetaData.msg  LaneletMapMetaData.msg  LaneletMapTileMetaData.msg  LaneletMapTileMetaDataWithID.msg  MapPrimitive.msg  MapProjectorInfo.msg  PCDMapWithID.msg  PointCloudCellMetadata.msg  PointCloudMapCellMetaData.msg  PointCloudMapCellWithID.msg  PointCloudMapCellWithMetaData.msg  PointCloudMapMetaData.msg  PointCloudMapMetadata.msg  PointCloudMapWithID.msg
autoware_map_msgs/srv/: DifferentialPointCloudMap.srv  GetDifferentialLanelet2Map.srv  GetDifferentialPointCloudMap.srv  GetIdPointCloudMap.srv  GetPartialPointCloudMap.srv  GetSelectedLanelet2Map.srv  GetSelectedPointCloudMap.srv  LoadDifferentialPointCloudMap.srv  LoadPCDMaps.srv  LoadPCDMapsWithIDs.srv  PartialPointCloudMap.srv
autoware_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_optional_msgs/: CMakeLists.txt  package.xml
autoware_optional_msgs/msg/: PublishedTime.msg
autoware_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  conanfile.py  package.xml
autoware_perception_msgs/msg/: DetectedObject.msg  DetectedObjectKinematics.msg  DetectedObjects.msg  FutureTrafficLightState.msg  ObjectClassification.msg  PredictedObject.msg  PredictedObjectKinematics.msg  PredictedObjects.msg  PredictedPath.msg  PredictedTrafficLightState.msg  RadarClassification.msg  RadarFieldInfo.msg  RadarInfo.msg  RadarObject.msg  SegmentationMask.msg  Shape.msg  TrackedObject.msg  TrackedObjectKinematics.msg  TrackedObjects.msg  TrafficLightArray.msg  TrafficLightElement.msg  TrafficLightGroup.msg  TrafficLightGroupArray.msg  TrafficSignal.msg  TrafficSignalArray.msg  TrafficSignalElement.msg
autoware_planning_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_planning_msgs/msg/: AvoidanceDebugMsgArray.msg  ControlPoint.msg  DrivingCorridor.msg  HADMapRoute.msg  LaneletRoute.msg  Linestring.msg  LocalMap.msg  Mission.msg  MissionLanesStamped.msg  MissionRemainingDistanceTime.msg  OrderMovement.msg  Path.msg  PathPoint.msg  PathPointWithLaneId.msg  PathWithLaneId.msg  PlanningFactor.msg  PlanningFactorArray.msg  PoseStampedWithUuid.msg  PoseWithUuidStamped.msg  RemainingDistanceETA.msg  RoadSegments.msg  Route.msg  RouteState.msg  SafetyFactor.msg  SafetyFactorArray.msg  Segment.msg  Trajectory.msg  TrajectoryPoint.msg  VectorMapRoute.msg  VectorMapSegment.msg  VelocityLimitConstraints.msg  VisualizationDistance.msg
autoware_planning_msgs/srv/: ClearRoute.srv  SetLaneChangeOverride.srv  SetLaneletRoute.srv  SetPoseWithUuidStamped.srv  SetPreferredPrimitive.srv  SetRoute.srv  SetRouteWithUuid.srv  SetWaypointRoute.srv
autoware_sensing_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_sensing_msgs/msg/: ConcatenatedPointCloudInfo.msg  GnssInsOrientationStamped.msg  GnssInsPosition.msg  GnssInsPositionStamped.msg  RadarClassification.msg  RadarObject.msg  RadarObjects.msg  SourcePointCloudInfo.msg
autoware_simulation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_simulation_msgs/msg/: DummyObject.msg  DummyObjectInitialState.msg  SimulatedObject.msg  SimulatedObjectInitialState.msg  UserDefinedValue.msg
autoware_system_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_system_msgs/msg/: AutowareState.msg  HazardStatus.msg  HazardStatusStamped.msg
autoware_system_msgs/srv/: ChangeAutowareControl.srv  ChangeOperationMode.srv  GetVersionAutoware.srv  GetVersionComponentInterface.srv
autoware_v2x_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_v2x_msgs/msg/: VirtualGateAreaCommand.msg  VirtualGateAreaStatus.msg  VirtualGateCommand.msg  VirtualGateStatus.msg  VirtualGateVehicleInfo.msg
autoware_vehicle_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_vehicle_msgs/msg/: ActuationCommand.msg  ActuationCommandStamped.msg  ActuationStatus.msg  ActuationStatusStamped.msg  ControlModeCommand.msg  ControlModeReport.msg  Engage.msg  GearCommand.msg  GearReport.msg  HandBrakeCommand.msg  HazardLightsCommand.msg  HazardLightsReport.msg  HeadlightsCommand.msg  HeadlightsReport.msg  HornCommand.msg  HornReport.msg  RawControlCommand.msg  StationaryLockingCommand.msg  SteeringReport.msg  TurnIndicatorsCommand.msg  TurnIndicatorsReport.msg  VehicleControlCommand.msg  VehicleKinematicState.msg  VehicleOdometry.msg  VehicleStateCommand.msg  VehicleStateReport.msg  VelocityReport.msg  WheelEncoder.msg  WipersCommand.msg  WipersReport.msg
autoware_vehicle_msgs/srv/: ControlModeCommand.srv
docs/: message-guidelines.md
profiles/: arm_gcc_pf   clang_pf  gcc_pf
