<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_msgs</name>
  <version>1.10.0</version>
  <description>Meta package for the autoware_msgs packages</description>

  <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>autoware_common_msgs</exec_depend>
  <exec_depend>autoware_control_msgs</exec_depend>
  <exec_depend>autoware_localization_msgs</exec_depend>
  <exec_depend>autoware_map_msgs</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>autoware_planning_msgs</exec_depend>
  <exec_depend>autoware_sensing_msgs</exec_depend>
  <exec_depend>autoware_system_msgs</exec_depend>
  <exec_depend>autoware_v2x_msgs</exec_depend>
  <exec_depend>autoware_vehicle_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
